Beautifying and simplifying 2.0